Added Toster for flash messages

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -3,7 +3,7 @@
     <div class="d-flex align-items-center justify-content-center h-100">
       <div class="d-flex flex-column my-text">
         <h1 class="text align-self-center p-2">Hello George!</h1>
-        <h4 class="text align-self-center p-2">This is just the basic structure.</h4>
+        <h4 class="text align-self-center p-2">User login is implemented and authenticated as well. Please check.</h4>
         <h4 class="text align-self-center p-2">Have a good day.</h4>
       </div>
     </div>
