Milestone2: User Login and Authentication

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/header' %>
 <section class="h-100">
   <header class="container h-100">
     <div class="d-flex align-items-center justify-content-center h-100">
