--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <p class="notice"></p>
+    <p class="alert"></p>
     <%= render 'toastr_rails/flash' %> 
     <%= yield %>
   </body>
