Added namespaces, crud for assignment and links in the header

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -3,9 +3,9 @@
   <header class="container h-100">
     <div class="d-flex align-items-center justify-content-center h-100">
       <div class="d-flex flex-column my-text">
-        <h1 class="text align-self-center p-2">Hello George!</h1>
-        <h4 class="text align-self-center p-2">User login is implemented and authenticated as well. Please check.</h4>
-        <h4 class="text align-self-center p-2">Have a good day.</h4>
+        <h1 class="text align-self-center p-2">Hello <%= current_user.name %>!</h1>
+        <h4 class="text align-self-center p-2">This is your personal dashboard.</h4>
+        <h4 class="text align-self-center p-2">Please check your assignments page.</h4>
       </div>
     </div>
   </header>
