Implemented active storage

--- a/app/views/admin/assignments/_form.html.erb
+++ b/app/views/admin/assignments/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="form-group">
     <div class="col-sm-12">
       <%= f.label 'Submit Date' %>
-      <%= f.datetime_field :submit_date, required: true, class: 'form-control' %>
+      <%= f.datetime_field :due_date, required: true, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
