--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,7 @@
             <th class='text-center'>Title</th>
             <th class='text-center'>Description</th>
             <th class='text-center'>Submit Date</th>
+            <th class='text-center'>Uploaded File</th>
             <th class='text-center'>Upload Assignment</th>    
           </tr>
         </thead>
@@ -24,8 +25,22 @@
             <tr>
               <td class='text-center'><%= assignment.title %></td>
               <td class='text-center'><%= assignment.description %></td>
-              <td class='text-center'><%= assignment.submit_date.strftime('%a %b %Y till %T') %></td>
-              <td class='text-center'><%= link_to 'File', 'javascript:void(0)', class: 'btn btn-secondary' %>
+              <td class='text-center'><%= assignment.due_date.strftime('%a %b %Y till %T') %></td>
+              <td class='text-center'>
+              </td>
+              <td class='text-center'>
+                <%= form_for :assignment_user, url: upload_file_users_path(assignment_id: assignment), method: :post, html: { class: 'form-horizontal', 'data-parsley-validate': '' } do |f| %>
+
+                  <div class="form-group">
+                    <div class="col-sm-12">
+                      <%= f.file_field :files, multiple: true, required: true, class: 'form-control' %>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <%= f.submit class: 'btn btn-primary float-left' %>
+                    </div>
+                <% end %>
               </td>
             </tr>
           </tbody>
