--- a/app/views/admin/assignments/show.html.erb
+++ b/app/views/admin/assignments/show.html.erb
@@ -29,11 +29,14 @@
       <h4 class='text-center'>No details</h4>
     <% end %>
   </div>
+  </br>
+  </br>
   <div class="row">
     <div class="col-lg-12">
-      <h2 class= 'float-left'>All Assignment Users</h2>
+      <h2 class= 'float-left'>All Uploaded Assignments of users</h2>
     </div>
   </div>
+  </br>
   <div class="row">
     <% if @assignment_users.present? %>
       <table class="table table-bordered table-striped table-hover">
@@ -54,7 +57,7 @@
                 <% if assignment_user.file&.attached? %>
                   <%= link_to assignment_user.file.blob.filename, rails_blob_path(assignment_user.file, disposition: "attachment") %>
                 <% else %>
-                  N/A
+                  Not Uploaded yet
                 <% end %>
               </td>
               <td class='text-center'><%= assignment_user.submit_date.strftime('%a %b %Y at %T') %></td>
@@ -63,7 +66,7 @@
         <% end %>
       </table>
     <% else %>
-      <h4 class='text-center'>No user has uploaded any file.</h4>
+      <h4 class='text-center'>None of the users have uploaded any assignment yet.</h4>
     <% end %>
   </div>
 </div>
