--- a/app/views/admin/assignments/index.html.erb
+++ b/app/views/admin/assignments/index.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <th class='text-center'>Title</th>
             <th class='text-center'>Description</th>
-            <th class='text-center'>Submit Date</th>
+            <th class='text-center'>Due Date</th>
             <th class='text-center'>Upload Assignment</th>
             <th class='text-center'>Actions</th>    
           </tr>
