--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
           <tr>
             <th class='text-center'>Title</th>
             <th class='text-center'>Description</th>
-            <th class='text-center'>Submit Date</th>
+            <th class='text-center'>Due Date</th>
             <th class='text-center'>Uploaded File</th>
             <th class='text-center'>Upload Assignment</th>    
           </tr>
