--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   </br>
   <div class="row">
     <div class="col-lg-12">
-      <h2 class= 'float-left'><%= current_user.name %> Assignments!</h2>
+      <h2 class= 'float-left'><%= current_user.name.humanize %> Assignments!</h2>
     </div>
   </div>
   </br>
