--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 <%- if controller_name != 'sessions' %>
   </br>
-  <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-primary" %><br />
+  <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-primary btn-block" %><br />
 <% end %>
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   </br>
