--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,10 +25,10 @@
             <tr>
               <td class='text-center'><%= assignment.title %></td>
               <td class='text-center'><%= assignment.description.truncate(20) %></td>
-              <td class='text-center'><%= assignment.due_date.strftime('%a %b %Y till %T') %></td>
+              <td class='text-center'><%= assignment.due_date.localtime.strftime('%a %b %Y till %T') %></td>
               <td class='text-center'>
-                <% if assignment.assignment_users.where(user_id: current_user.id)&.first&.file&.attached? %>
-                  <%= link_to assignment.assignment_users.where(user_id: current_user.id).first.file.blob.filename, rails_blob_path(assignment.assignment_users.first.file, disposition: "attachment") %>
+                <% if user_assignment(assignment)&.attached? %>
+                  <%= link_to user_assignment(assignment)&.blob.filename, rails_blob_path(assignment.assignment_users.first.file, disposition: "attachment") %>
                 <% else %>
                   Not Uploaded yet
                 <% end %>
