--- a/app/views/admin/assignments/show.html.erb
+++ b/app/views/admin/assignments/show.html.erb
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <th class='text-center'>Due Date</th>
-          <td class='text-center'><%= @assignment.due_date.strftime('%a %b %Y till %T') %></td>
+          <td class='text-center'><%= @assignment.due_date.strftime('%a %d %b %Y by %l:%M %p') %></td>
         </tr>
       </table>
     <% else %>
@@ -60,7 +60,7 @@
                   Not Uploaded yet
                 <% end %>
               </td>
-              <td class='text-center'><%= assignment_user.submit_date.localtime.strftime('%a %b %Y at %T') %></td>
+              <td class='text-center'><%= assignment_user.submit_date.localtime.strftime('%a %d %b %Y at %l:%M %p') %></td>
             </tr>
           </tbody>
         <% end %>
