--- a/app/views/admin/assignments/_form.html.erb
+++ b/app/views/admin/assignments/_form.html.erb
@@ -18,6 +18,24 @@
     </div>
   </div>
   <div class="form-group">
+    <div class="col-sm-12">
+      <%= f.label 'Command' %>
+      <%= f.text_field :command, required: true, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-12">
+      <%= f.label 'Argument' %>
+      <%= f.text_field :argument, required: true, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-12">
+      <%= f.label 'Grading Script' %>
+      <%= f.file_field :grading_script_file, required: true, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-xs-12">
       <%= f.submit class: 'btn btn-primary float-left' %>
       <%= link_to 'Cancel', admin_assignments_path, class: 'btn btn-success float-right' %>
