--- a/app/views/admin/assignments/show.html.erb
+++ b/app/views/admin/assignments/show.html.erb
@@ -64,6 +64,8 @@
             <th class='text-center'>Email</th>
             <th class='text-center'>Assignment File</th>
             <th class='text-center'>Sumitted Date</th>
+            <th class='text-center'>Grade</th>
+            <th class='text-center'>Rubric</th>
           </tr>
         </thead>
         <% @assignment_users.each do |assignment_user| %>
@@ -79,6 +81,14 @@
                 <% end %>
               </td>
               <td class='text-center'><%= assignment_user.submit_date.localtime.strftime('%a %d %b %Y at %l:%M %p') %></td>
+              <td class='text-center'><%= assignment_user.grade %></td>
+              <td class='text-center'>
+                <% if assignment_user.rubric&.attached? %>
+                  <%= link_to assignment_user.rubric.blob.filename, rails_blob_path(assignment_user.rubric, disposition: "attachment") %>
+                <% else %>
+                  Not Available yet
+                <% end %>
+              </td>
             </tr>
           </tbody>
         <% end %>
