Resolve some feedbacks

--- a/app/views/admin/assignments/_form.html.erb
+++ b/app/views/admin/assignments/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="form-group">
     <div class="col-sm-12">
       <%= f.label 'Description' %>
-      <%= f.text_area :description, required: true, class: 'form-control' %>
+      <%= f.text_area :description, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
@@ -26,7 +26,7 @@
   <div class="form-group">
     <div class="col-sm-12">
       <%= f.label 'Argument' %>
-      <%= f.text_field :argument, required: true, class: 'form-control' %>
+      <%= f.text_field :argument, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
