--- a/app/views/admin/assignments/show.html.erb
+++ b/app/views/admin/assignments/show.html.erb
@@ -18,7 +18,7 @@
         </tr>
         <tr>
           <th class='text-center'>Description</th>
-          <td class='text-center'><%= @assignment.description %></td>
+          <td class='text-center'><%= @assignment.description.present? ? assignment.description : "N/A" %></td>
         </tr>
         <tr>
           <th class='text-center'>Due Date</th>
