--- a/app/views/admin/assignments/index.html.erb
+++ b/app/views/admin/assignments/index.html.erb
@@ -25,7 +25,7 @@
           <tbody>
             <tr>
               <td class='text-center'><%= assignment.title %></td>
-              <td class='text-center'><%= assignment.description.truncate(20) %></td>
+              <td class='text-center'><%= assignment.description.present? ? assignment.description.truncate(20) : "N/A" %></td>
               <td class='text-center'><%= assignment.due_date.strftime('%a %d %b %Y by %l:%M %p') %></td>
               <td class='text-center'>
                 <% if assignment.sent_to_users == true %>
