--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -35,7 +35,7 @@
                   Not Available yet
                 <% end %>
               </td>
-              <td class='text-center'><%= assignment.assignment_users.first&.grade.present? ? assignment.assignment_users.first.grade : 'Not Available yet' %></td>
+              <td class='text-center'><%= user_grade(assignment).present? ? user_grade(assignment) : 'Not Available yet' %></td>
               <td class='text-center'>
                 <% if user_assignment(assignment)&.attached? %>
                   <%= link_to user_assignment(assignment)&.blob.filename, rails_blob_path(assignment.assignment_users.first.file, disposition: "attachment") %>
