--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,11 +7,11 @@
             <%= link_to "Dashboard", admin_dashboards_path, class: 'btn btn-warning' %>
             <%= link_to "All Users", admin_users_path, class: 'btn btn-primary' %>
             <%= link_to "Assignments", admin_assignments_path, class: 'btn btn-success' %>
-            <%= link_to "Sign Out", '#', method: :delete, class: 'btn btn-danger' %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
           <% else %>
             <%= link_to "Dashboard", root_path, class: 'btn btn-warning' %>
             <%= link_to "Assignments", users_path, class: 'btn btn-success' %>
-            <%= link_to "Sign Out","#" , method: :delete, class: 'btn btn-danger' %>
+            <%= link_to "Sign Out",destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
           <% end %>
         </div>
       </div>
